fix: desktop overflow + api issues

--- a/frontend/src/components/layout/layout.module.scss
+++ b/frontend/src/components/layout/layout.module.scss
@@ -37,6 +37,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow-x: hidden; // might cause issues with ios (if it does ):
 }
 .content {
   --constrain: 1200px;
